--- a/index.html
+++ b/index.html
@@ -6676,156 +6676,128 @@ on = function(){
 })();
 </script>
 <script>
-// === FIXLY PATCH v2: Resultado -> Estado + redirección de modal ===
-(function () {
-  // Utils cortas
-  const $ = (q, c) => (c || document).querySelector(q);
-  const $$ = (q, c) => Array.from((c || document).querySelectorAll(q));
+<script>
+// === FIXLY PATCH v4 — sin jQuery, robusto ===
+(function(){
+  const $  = (q,ctx)=> (ctx||document).querySelector(q);
+  const $$ = (q,ctx)=> Array.from((ctx||document).querySelectorAll(q));
 
-  // 1) Normalizar IDs/Selects (intenta varios por si cambian)
-  function getResultadoSelect(ctx) {
-    return $('#resultado, select[name="resultado"], #estado-equipo-resultado', ctx);
+  // ------- Helpers -------
+  function getLabelRowByText(txt, ctx){
+    const lab = $$('.modal label, label', ctx).find(l=> (l.textContent||'').trim().toLowerCase().includes(txt));
+    return lab ? lab.closest('.form-group, .mb-3, .row, .field, .col, div') : null;
   }
-  function getEstadoSelect(ctx) {
-    return $('#estado, select[name="estado"], #estado-reparacion-select', ctx);
-  }
-  function getCostoInput(ctx) {
-    return $('#costo-final, input[name="costo_final"], #costoFinal', ctx);
-  }
-  function getTecnicoRow(ctx) {
-    // fila contenedora del select técnico (para ocultar)
-    const sel = $('#tecnico-asignado, select[name="tecnico"], #tecnicoAsignado', ctx);
-    return sel ? sel.closest('.form-group, .mb-3, .row, .field') : null;
-  }
-
-  // 2) Mapeo de Resultado -> Estado (editá los textos a tu gusto si hace falta)
-  //  - Matchea por "includes" en minúsculas para ser tolerante a variantes
-  const MAPEO = [
-    { match: ['no reparado', 'no aceptó', 'no acepto', 'presupuesto'], estado: 'Para devolver' },
-    { match: ['irreparable'],                                            estado: 'Para devolver' },
-    { match: ['sin repuesto', 'no hay repuesto'],                        estado: 'Para devolver' },
-    { match: ['en diagnóstico', 'diagnostico', 'diagnóstico'],           estado: 'En diagnóstico' },
-    { match: ['presupuestado', 'a la espera de ok', 'espera ok'],        estado: 'Presupuestado' },
-    { match: ['reparado'],                                               estado: 'Listo para entregar' },
-    { match: ['entregado'],                                              estado: 'Entregado' },
-  ];
-
-  function inferirEstadoDesdeResultado(valorResultado) {
-    const v = (valorResultado || '').toLowerCase().trim();
-    for (const regla of MAPEO) {
-      if (regla.match.some(m => v.includes(m))) return regla.estado;
+  function getSelect(namesOrIds, ctx){
+    for (const sel of namesOrIds){
+      const byId  = $('#'+sel, ctx);
+      if (byId && byId.tagName==='SELECT') return byId;
+      const byName = $(`select[name="${sel}"]`, ctx);
+      if (byName) return byName;
     }
-    // fallback razonable
+    return null;
+  }
+  // Mapeo tolerante Resultado -> Estado
+  const MAPEO = [
+    { inc: ['no reparado','no acepto','no aceptó','presupuesto'], to:'Para devolver' },
+    { inc: ['irreparable'],                                   to:'Para devolver' },
+    { inc: ['sin repuesto','no hay repuesto'],                to:'Para devolver' },
+    { inc: ['diagnostico','diagnóstico','en diagnóstico'],    to:'En diagnóstico' },
+    { inc: ['presupuestado','espera ok','a la espera'],       to:'Presupuestado' },
+    { inc: ['reparado'],                                      to:'Listo para entregar' },
+    { inc: ['entregado'],                                     to:'Entregado' },
+  ];
+  function inferEstado(textoResultado){
+    const v = (textoResultado||'').toLowerCase();
+    for (const r of MAPEO){ if (r.inc.some(k=>v.includes(k))) return r.to; }
     return 'En curso';
   }
+  function setSelectByTextOrValue(select, target){
+    if (!select) return;
+    const t = (target||'').toLowerCase();
+    const opt = Array.from(select.options).find(o=>{
+      const tv = (o.value||'').toLowerCase().trim();
+      const tt = (o.text||'').toLowerCase().trim();
+      return tv===t || tt===t;
+    });
+    if (opt) select.value = opt.value; else select.value = target;
+    select.dispatchEvent(new Event('change'));
+  }
 
-  // 3) En el modal "Estado del Equipo": setear Estado automáticamente
-  function cablearModalEstadoEquipo(modal) {
-    if (!modal || modal.__cableado) return;
-    modal.__cableado = true;
+  // ------- Parche a cada modal que aparece -------
+  function patchModal(modal){
+    if (!modal || modal.__ft_patched) return;
+    const titleEl = $('.modal-title, h5, h4', modal);
+    const titleTx = (titleEl?.textContent||'').trim().toLowerCase();
 
-    // Ocultar "Técnico Asignado" si existiera
-    const tecnicoRow = getTecnicoRow(modal);
-    if (tecnicoRow) tecnicoRow.style.display = 'none';
+    // Solo tocamos si es el modal de Estado/Edición
+    const looksLikeEstado = /editar\s+estado\s+de\s+reparaci/.test(titleTx) || /estado\s+del?\s+equipo/.test(titleTx);
+    if (!looksLikeEstado) return;
 
-    // Título del modal
-    const title = $('h5, h4, .modal-title', modal);
-    if (title) title.textContent = 'Estado del Equipo';
+    modal.__ft_patched = true;
 
-    const selResultado = getResultadoSelect(modal);
-    const selEstado    = getEstadoSelect(modal);
+    // 1) Renombrar título
+    if (titleEl) titleEl.textContent = 'Estado del Equipo';
 
-    const actualizarEstado = () => {
+    // 2) Ocultar "Técnico Asignado" si existe
+    const tecRow = getLabelRowByText('técnico asignado', modal) || getLabelRowByText('tecnico asignado', modal);
+    if (tecRow) tecRow.style.display = 'none';
+
+    // 3) Wire Resultado -> Estado (solo si hay ambos selects)
+    const selResultado = getSelect(['resultado','estado-equipo-resultado'], modal);
+    const selEstado    = getSelect(['estado','estado-reparacion-select'], modal);
+    const updateEstado = ()=> {
       if (!selResultado || !selEstado) return;
-      const target = inferirEstadoDesdeResultado(selResultado.value || selResultado.options?.[selResultado.selectedIndex]?.text);
-      // Si existe la opción, la seleccionamos; si no, seteamos value directo
-      const opt = Array.from(selEstado.options || []).find(o => (o.text || o.value).toLowerCase().trim() === target.toLowerCase());
-      if (opt) selEstado.value = opt.value; else selEstado.value = target;
-      selEstado.dispatchEvent(new Event('change'));
+      const val = selResultado.value || selResultado.options?.[selResultado.selectedIndex]?.text;
+      setSelectByTextOrValue(selEstado, inferEstado(val));
     };
-
-    if (selResultado) {
-      selResultado.addEventListener('change', actualizarEstado);
-      // Ejecutamos una vez al abrir
-      setTimeout(actualizarEstado, 0);
+    if (selResultado && selEstado){
+      selResultado.addEventListener('change', updateEstado);
+      // correr una vez al abrir
+      setTimeout(updateEstado, 0);
     }
 
-    // 4) Guardado: si el estado queda "Entregado", marcamos para archivar (si el backend lo soporta)
+    // 4) Al guardar, si estado = Entregado, mandar flag archivar=1
     const form = $('form', modal) || modal;
-    form.addEventListener('submit', (ev) => {
-      try {
-        const estadoActual = selEstado ? (selEstado.value || selEstado.options?.[selEstado.selectedIndex]?.text) : '';
-        // Si tu submit es vía fetch manual, podés inyectar un flag:
-        // window.__archivar = (estadoActual && estadoActual.toLowerCase().includes('entregado'));
-        // En formularios nativos, añadimos un input hidden:
-        let hidden = $('input[name="archivar"]', form);
-        if (!hidden) {
-          hidden = document.createElement('input');
-          hidden.type = 'hidden';
-          hidden.name = 'archivar';
-          form.appendChild(hidden);
-        }
-        hidden.value = (estadoActual || '').toLowerCase().includes('entregado') ? '1' : '0';
-      } catch (e) { /* noop */ }
+    form.addEventListener('submit', ()=>{
+      if (!selEstado) return;
+      const current = selEstado.value || selEstado.options?.[selEstado.selectedIndex]?.text || '';
+      let hidden = $('input[name="archivar"]', form);
+      if (!hidden){
+        hidden = document.createElement('input');
+        hidden.type = 'hidden';
+        hidden.name = 'archivar';
+        form.appendChild(hidden);
+      }
+      hidden.value = current.toLowerCase().includes('entregado') ? '1' : '0';
     });
   }
 
-  // 5) Redirigir “Editar Estado de Reparación” -> abrir “Estado del Equipo”
-  //    (si tu botón/acción abre otro modal, lo interceptamos y abrimos el correcto)
-  document.addEventListener('click', function (e) {
-    const btn = e.target.closest('button, a');
-    if (!btn) return;
+  // ------- Detectar modales abiertos (Bootstrap o sin) -------
+  // Con Bootstrap 5:
+  document.addEventListener('shown.bs.modal', (ev)=> patchModal(ev.target), true);
 
-    // Heurísticas: botones con lápiz/azul o con data-target al modal de estado de reparación
-    const dataTarget = btn.getAttribute('data-target') || btn.getAttribute('href') || '';
-    const titleAttr  = (btn.getAttribute('title') || '').toLowerCase();
-
-    const esEditarEstadoReparacion =
-      titleAttr.includes('estado de la reparación') ||
-      titleAttr.includes('editar') ||
-      dataTarget.includes('#modal-estado-reparacion');
-
-    if (esEditarEstadoReparacion) {
-      // Prevenimos la apertura del modal "viejo"
-      if (dataTarget) e.preventDefault();
-
-      // Abrimos (o forzamos) el modal correcto de "Estado del Equipo"
-      const modalEquipo =
-        $('#modal-estado-equipo') ||
-        $('.modal').find(m => /estado.+equipo/i.test(m.textContent || ''));
-
-      if (modalEquipo && typeof $(modalEquipo).modal === 'function') {
-        // Bootstrap jQuery (si está)
-        $(modalEquipo).modal('show');
-        cablearModalEstadoEquipo(modalEquipo);
-      } else if (modalEquipo) {
-        // Sin jQuery: toggles básicos
-        modalEquipo.style.display = 'block';
-        modalEquipo.classList.add('show');
-        cablearModalEstadoEquipo(modalEquipo);
+  // Fallback sin Bootstrap: observar cambios de DOM/clases
+  const obs = new MutationObserver((muts)=>{
+    muts.forEach(m=>{
+      m.addedNodes && m.addedNodes.forEach(n=>{
+        if (n.nodeType===1){
+          if (n.classList?.contains('modal')) patchModal(n);
+          // También si se agrega contenido dentro de un modal ya existente
+          const mods = $$('.modal', n);
+          mods.forEach(patchModal);
+        }
+      });
+      if (m.target && m.target.nodeType===1 && m.target.classList?.contains('modal')) {
+        patchModal(m.target);
       }
-    }
-  }, true);
-
-  // 6) Auto-cablear cuando el modal de "Estado del Equipo" exista en DOM
-  const obs = new MutationObserver(() => {
-    $$('.modal').forEach(m => {
-      const isEquipo = /estado\s+del?\s+equipo/i.test((m.querySelector('.modal-title')?.textContent || m.textContent || ''));
-      if (isEquipo) cablearModalEstadoEquipo(m);
     });
   });
-  obs.observe(document.documentElement, { childList: true, subtree: true });
+  obs.observe(document.documentElement, { childList:true, subtree:true, attributes:true, attributeFilter:['class','style'] });
 
-  // 7) (Opcional) Costo Final: si querés prellenarlo con suma de items/anticipo
-  //    Dejá este hook listo para que llames a tu API y setees el valor.
-  async function prellenarCosto(modal, ordenId) {
-    try {
-      // Ejemplo: const r = await fetch(`/api/ordenes/${ordenId}/totales`);
-      // const { total } = await r.json();
-      // const costo = getCostoInput(modal);
-      // if (costo && total != null) costo.value = total;
-    } catch (e) { /* noop */ }
-  }
+  // Por si el modal ya estaba en DOM
+  window.addEventListener('DOMContentLoaded', ()=>{
+    $$('.modal').forEach(patchModal);
+  });
 })();
 </script>
 
